@@ -200,6 +200,7 @@
 * Normalize API versions for paypal, paysafe, and payu_latam [mjdonga] #5515
 * StripePI: Add support for multicapture [mjdonga] #5491
 * Normalize API Version for Plexo, Pin, Priority [adarsh-spreedly] #5517
+* Litle: Remove customBilling element from echeck and capture transactions [sumit-sharmas] #5512
 
 == Version 1.137.0 (August 2, 2024)
 * Unlock dependency on `rexml` to allow fixing a CVE (#5181).
